--- a/assets/files/vaccines/index.html
+++ b/assets/files/vaccines/index.html
@@ -17,6 +17,8 @@
       </p>
   </header>
 <div>
+  <span> This graph is based on the latest government vaccine figures found here: <a hred=" "</a>. New figures are usually published by 5pm. 
+    My algorithm grabs these numbers, and then updates the graph shown below, at 6pm (to allow for delays) everyday.</span>
         <span >
             <img src="../../../foo.png">
         </span> 
