--- a/assets/files/vaccines/index.html
+++ b/assets/files/vaccines/index.html
@@ -17,11 +17,11 @@
       </p>
   </header>
 <div>
-  <span> This graph is based on the latest government vaccine figures found here: <a href="https://coronavirus.data.gov.uk/"</a>. New figures are usually published by 5pm. 
-    My algorithm grabs these numbers, and then updates the graph shown below, at 6pm (to allow for delays) everyday.</span>
-        <span >
-            <img src="../../../foo.png">
-        </span> 
+  <p> This graph is based on the latest government vaccine figures found here: <a href="https://coronavirus.data.gov.uk/">https://coronavirus.data.gov.uk/</a>.</p>
+  <p> New figures are usually published by 5pm. My algorithm grabs these numbers, and then updates the graph shown below, at 6pm (to allow for delays) everyday.</p>
+  <span >
+      <img src="../../../foo.png">
+  </span> 
 </div>
 
 
