--- a/assets/files/bsl/index.html
+++ b/assets/files/bsl/index.html
@@ -26,7 +26,7 @@
 
   <div data-role="page" id="main-page" style="background: #FFF";">
     <div data-role="header" style="background: #1D3557";">
-      <a href="index.html" data-icon="refresh" style="background: #E63946";">Home</a>
+      <a href="index.html" data-icon="refresh" style="background: #E63946;" onclick="refresh()">Home</a>
       <h1>Alphabet</h1>
     </div>
     <div data-role="content">
@@ -34,10 +34,11 @@
       <div id="answer" style="display:none;"></div>
       <div id="visibleanswer" style="display:none;"></div>
 
-      <input type="text" id="sign" name="sign" placeholder="Type here what the sign means">
-      <div id="submitbutton"><button onclick="validateForm()">Submit</button></div>
-      <div id="nextbutton" style="display: none;"><button onclick="nextCard()">Next</button></div>
+      <input type="text" id="sign" name="sign" placeholder="Type here what the sign means" class="myform">
+      <div id="submitbutton" class="myform"><button onclick="validateForm()">Submit</button></div>
+      <div id="nextbutton" style="display: none;" class="myform"><button onclick="nextCard()">Next</button></div>
       <a id="skip-card" class="myform" data-role="button" data-mini="true">Skip</a>
+      <div id="score" class="myform"><p></p></div>
     </div>
   </div>
 
